# mentor-dashboard

./: README.md  mentor-dashboard.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: changelog  control  copyright  files  rules  watch
debian/upstream/: metadata
po/: mentor-dashboard.pot  sv.mo  sv.po
src/mentor_dashboard/: main.py
