[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentor-dashboard"
version = "0.1.3"
description = "GTK4 Debian Mentors dashboard for package review and sponsorship"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
mentor-dashboard = "mentor_dashboard.main:main"

[tool.setuptools.packages.find]
where = ["src"]
